<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiBoardDetect</string>
    <string name="action_settings">Settings</string>
    <string name="settings">设置</string>
    <string name="find_Ap_Name">搜索到WiFi</string>
    <string name="wifiBoardMac">MAC :</string>
    <string name="wifiBoardMacAddress"></string>
    <string name="result_text">检测结果：</string>
    <string name="DetectResult"/>
    <string name="wifiName_text">WIFI 名称列表</string>
    <string name="wifiLevel_text">信号强度标准值(dB)</string>
    <string name="ssid_1_text">ssid 1:</string>
    <string name="ssid_2_text">ssid 2:</string>
    <string name="ssid_3_text">ssid 3:</string>
    <string name="ssid_4_text">ssid 4:</string>
    <string name="ssid_5_text">ssid 5:</string>
    <string name="mac_range_text">MAC范围：</string>
    <string name="save">保存</string>
    <string name="modify">修改</string>
    <string name="back">返回测试界面</string>
    <string name="null_text">       </string>
    <string name="user_settings_explain"></string>
    <string name="ssid"/>
    <string name="level"/>
    <string name="to">----------</string>
    <string name="signalNum">信号强度百分比</string>

<string name="standPercent">信号强度百分比阀值：(%)</string>

</resources>
