<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/null_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/null_text" />

        <TextView
            android:id="@+id/wifiName_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/wifiName_text" />

        <TextView
            android:id="@+id/wifiLevel_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/wifiLevel_text" />

    </LinearLayout>


	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/ssid_1_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:text="@string/ssid_1_text" />

	    <EditText
	        android:id="@+id/ssid_1_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:gravity="center_horizontal"
	        android:ems="10" />

	    <EditText
	        android:id="@+id/ssid_1_level"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:gravity="center_horizontal"
	        android:ems="10" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/ssid_2_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_weight="1"
		    android:text="@string/ssid_2_text" />

		<EditText
		    android:id="@+id/ssid_2_name"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:gravity="center_horizontal"
		    android:ems="10" >

		    <requestFocus />
		</EditText>

		<EditText
		    android:id="@+id/ssid_2_level"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/ssid_3_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_weight="1"
		    android:text="@string/ssid_3_text" />

		<EditText
		    android:id="@+id/ssid_3_name"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:gravity="center_horizontal"
		    android:ems="10" />

		<EditText
		    android:id="@+id/ssid_3_level"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/ssid_4_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_weight="1"
		    android:text="@string/ssid_4_text" />

		<EditText
		    android:id="@+id/ssid_4_name"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
			android:layout_weight="3"
		    android:gravity="center_horizontal"
		    android:ems="10" />

		<EditText
		    android:id="@+id/ssid_4_level"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/ssid_5_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_weight="1"
		    android:text="@string/ssid_5_text" />

		<EditText
		    android:id="@+id/ssid_5_name"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:gravity="center_horizontal"
		    android:ems="10" />

		<EditText
		    android:id="@+id/ssid_5_level"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal" >

		<TextView
		    android:id="@+id/mac_range_text"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:text="@string/mac_range_text" />

		<EditText
		    android:id="@+id/macAddressRangeBegin"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:text="@string/wifiBoardMacAddress"
		    android:gravity="center_horizontal"
		    android:ems="10" />

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center_horizontal"
		    android:text="@string/to" />

		<EditText
		    android:id="@+id/macAddressRangeEnd"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />

	</LinearLayout>

<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
			android:gravity="center_horizontal"
		    android:text="@string/standPercent" />
		<EditText
		    android:id="@+id/standPercent"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:gravity="center_horizontal"
		    android:ems="10" />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		
						<Button
		    android:id="@+id/save"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/save" />

		<Button
		    android:id="@+id/modify"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/modify" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/back"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/back" />

	</LinearLayout>

	

</LinearLayout>
